--- a/01- Expanding Cards/style.css
+++ b/01- Expanding Cards/style.css
@@ -67,7 +67,12 @@ body{
   .container{
     width: 100vw;
   }
-  .panel:nth-of-type(4),.panel:nth-of-type(5){
-    display: none;
+  .panel p{
+    bottom: 30px;
+    left: 30px;
+  }
+  .panel h3{
+    bottom: 120px;
+    left: 30px;
   }
 }
